# pawn

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json  startup.sh
app/: Cargo.toml  README.md  config.template.toml  input.css  package-lock.json  package.json
app/assets/: app.css
app/src/: main.rs
app/src/backend/: chat.rs  config.rs  mod.rs
app/src/components/: avatar.rs  chat_input.rs  chat_message.rs  chat_view.rs  mod.rs
cli/: Cargo.toml  module.wasm
cli/src/: main.rs
crates/: README.md
crates/chat/: Cargo.toml
crates/chat/src/: bindings.rs  lib.rs
crates/chat/wit/: handler.wit  types.wit  world.wit
crates/cloud-ai/: Cargo.toml
crates/cloud-ai/src/: chat.rs  lib.rs
crates/patches/wasi-http/: Cargo.toml
crates/patches/wasi-http/src/: types.rs
crates/pawn-runtime/: Cargo.toml
crates/pawn-runtime/src/: runtime.rs
crates/pawn-square/: Cargo.toml
crates/pawn-square/src/: square.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: component.rs  lib.rs  runtime.rs  state.rs
notes/: 0002.MD  0003.MD
