[package]
name = "pawn-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pawn-square = { path = "../crates/pawn-square" }

anyhow.workspace = true

[lints]
workspace = true
