[package]
name = "pawn-chat"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cloud-ai = { workspace = true }
futures = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
wstd = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
wasmtime = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "pawn:chat"

[package.metadata.component.dependencies]
