[package]
name = "cloud-ai"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_builder = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
snafu = { workspace = true }
http = { workspace = true, features = ["std"] }


[lints]
workspace = true
