[package]
name = "pawn-square"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
wasmtime.workspace = true

[lints]
workspace = true
